# python-project-52

./: .gitignore  README.md  pyproject.toml  setup.cfg
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  footer.html  index.html
task_manager/users/: forms.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/: create.html  delete.html  read.html
