[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task manager"
authors = ["aleksei <jiunov@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
