[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task manager"
authors = ["aleksei <jiunov@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pip = "^24.1.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
django-bootstrap5 = "^24.2"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
